--- a/templates/layout.html
+++ b/templates/layout.html
@@ -43,5 +43,13 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
         </script>
+
+    <footer class="text-center text-lg-start" style="background-color: #212529; position: absolute; left: 0; bottom: 0; width: 100%;">
+        <!-- Copyright -->
+        <div class="text-center text-white p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        HandCrafted by <a href="mailto:moizrajkotwala6904@gmail.com">Moiz Rajkotwala</a>
+        </div>
+        <!-- Copyright -->
+    </footer>
 </body>
 </html>
