less imp reload removed

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,8 +24,8 @@
                     placeholder="Updated By" hidden />
             </div>
             <center>
-                <button type="submit" class="btn btn-dark mx-1">Submit</button> <button type="reset"
-                    class="btn btn-primary">Reset</button>
+                <button type="submit" class="btn btn-dark mx-1">Submit</button>
+                <button type="reset" class="btn btn-primary">Reset</button>
             </center>
         </form>
         <br />
